syntax = "proto3";

package aleapb;

import "requestpb/requestpb.proto";

option go_package = "github.com/filecoin-project/mir/pkg/pb/aleapb";

// ============================================================
// Messages
// ============================================================

message AleaMessage {
    oneof type {
        VCBC broadcast = 1;
        Agreement agreement = 2;
    }
}

message MsgId {
    string queue_idx = 1;
    uint64 slot = 2;
}

message VCBC {
    MsgId instance = 1;

    oneof type {
        VCBCSend send = 2;
        VCBCEcho echo = 3;
        VCBCFinal final = 4;
    }
}

message VCBCSend {
    requestpb.Batch payload = 1;
}

message VCBCEcho {
    requestpb.Batch payload = 1;
    bytes signature_share = 2;
}

message VCBCFinal {
    requestpb.Batch payload = 1;
    bytes signature = 2;
}

message Agreement {
    oneof type {
        CobaltABBA aba = 1;
        AgreementFillGap fillGap = 2;
        AgreementFiller filler = 3;
    }
}

message AgreementFillGap {
    MsgId id = 1;
}

message AgreementFiller {
    MsgId id = 1;
    VCBCFinal msg = 2;
}


message CobaltABBA {
    MsgId instance = 1;
    // TODO
}

// ============================================================
// Events
// ============================================================

message AleaEvent {
    oneof type {
        VCBCDeliver vcbc_deliver = 1;
    }
}

message VCBCDeliver {
    MsgId id = 1;
    requestpb.Batch payload = 2;
}

// TODO: extend with thresh signshare/combine/validate results

// ============================================================
// Status
// ============================================================

message Status {
    // TODO
}